--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "sequelize": "^4.41.2"
   },
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "dev-start": "nodemon ."
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
