--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Sil Westerveld <git@silwesterveld.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.4.0",
