--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "node .",
-    "dev-start": "nodemon ."
+    "dev": "nodemon ."
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
